# fcitx

./: .gitignore  CMakeLists.txt
src/im/pinyin/: CMakeLists.txt  py.c
src/lib/fcitx/: ime.c  instance.c
src/module/dbus/: dbusstuff.c
src/module/remote/: remote.c
test/: testmessage.c  testpinyin.c
